--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <main>
 
-        <!-- ======================================= CONTACT SECTION ================================================== -->
+        <!-- ======================================= about SECTION ================================================== -->
         <section class="about" id="about-section"> 
             <!-- statr about me -->
             <div class="section title">
@@ -251,7 +251,7 @@
                 </div>
 
                 <div>
-                    <a href="assets\cricket match.pdf" download="Dilusha's CV.pdf"><h2>DOWNLOAD MY CV </h2></a>
+                    <a href="assets\pdf\my pdf.pdf" download="Dilusha's RESUME.pdf"><h2>DOWNLOAD MY CV </h2></a>
 
                 </div>
 
