Added linked icon

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>dilusha</title>
     <meta name=" authour" content="dilusha ekanyaka">
     <meta name="description" content=" dilusha's web site">
+    <link rel="icon" type="image/icon" href="assets\images\my profile pic (2).ico">
 
     <meta
             property="og:image"
-            content="https://github.com/account"/>
+            content="https://raw.githubusercontent.com/dilushaeka/web-demo/master/assets/images/my%20officia%20photo%20png.png"/>
     <meta
             property="og:description"
             content=" i am dilusha web developer na d software enegineering student"/>
@@ -30,7 +31,7 @@
     </section>
 
 
-    <!-- ==================Header==================   -->
+    <!-- ============== ==============================Header=====================================================   -->
     <header id="header" class="fix a top">
         <div class="container-flud">
 
@@ -322,7 +323,9 @@
 
                   <div class="">
                     <div class="">
-                      <img src="assets\videos\20221206_224953.mp4" class="img-fluid" alt="">
+                        <video src="assets\videos\20221206_224953.mp4" width="400" controls muted autoplay ></video>
+                        
+                     
                       <div class="portfolio-info">
                         <h4>App 1</h4>
                         <p>App</p>
