--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name=" authour" content="dilusha ekanyaka">
     <meta name="description" content=" dilusha's web site">
     <link rel="icon" type="image/icon" href="assets\images\my profile pic (2).ico">
+    <link rel="stylesheet" href="css/main.css">
 
     <meta
             property="og:image"
@@ -37,13 +38,13 @@
 
 
             <nav id="navbar" class="navbar order-last">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about-section">About</a></li>
-                    <li><a href="#resume-section">Resume </a></li>
-                    <li><a href="#gallery-section">Gallery</a></li>
-                    <li><a href="#mywork-section">My work</a></li>
-                    <li><a href="#contatct-section">Contact</a></li>
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a href="#about-section">About</a></li>
+                    <li class="nav-item"><a href="#resume-section">Resume </a></li>
+                    <li class="nav-item"><a href="#gallery-section">Gallery</a></li>
+                    <li class="nav-item"><a href="#mywork-section">My work</a></li>
+                    <li class="nav-item"><a href="#contatct-section">Contact</a></li>
                 </ul>
             </nav>
 
