Edit About Section,Home Section,Contact Me Section

--- a/index.html
+++ b/index.html
@@ -507,8 +507,10 @@
                 <h1>YOU CAN CONTACT ME ON </h1>
             </div>
 
-            <div class="">
-                <div class="info-box">
+
+            <div class="contact-me-div">
+              <div class="">
+                <div class="infomation-box">
                   <i class=""></i>
                   <img src="assets\png\location icon.png" alt="">
                   <h3>My Location</h3>
@@ -518,7 +520,7 @@
               </div>
 
               <div class="">
-                <div class="info-box">
+                <div class="infomation-box">
                   <i class=""></i>
                   <img src="assets\png\icons8-share-50.png" alt="">
                   <h3>Social Profiles</h3>
@@ -529,26 +531,23 @@
                   </div>
                 </div>
 
-                <div class="col-md-6 mt-4 d-flex align-items-stretch">
-                    <div class="info-box">
+                <div class="">
+                    <div class="infomation-box">
                       <i class="bx bx-envelope"></i>
                       <img src="assets\png\emails-icon.png" alt="">
                       <hr>  <a href="mailto:dilushaeka99@gmail.com"> mail me</a>
                     </div>
-                  </div>
-
-                  
-
-   
-
-                  <div class="">
-                    <div class="info-box">
+                </div>
+                <div class="">
+                    <div class="infomation-box">
                       <i class="bx bx-phone-call"></i>
                       <h3>Call Me</h3>
                       <img src="assets\png\phone icon.png" alt="">
                       <br> <a href="tel:+94702487524"> Call Me </a>
                     </div>
-                  </div>
+                </div>
+            </div>
+            
 
 
               </div>
