Recorect css to GitHub

--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
 
 
             <div class="contact-me-div">
-              <div class="">
-                <div class="infomation-box">
+              <div class="infomation-box">
+                <div class="location-div">
                   <i class=""></i>
                   <img src="assets\png\location icon.png" alt="">
                   <h3>My Location</h3>
@@ -519,8 +519,8 @@
                 </div>
               </div>
 
-              <div class="">
-                <div class="infomation-box">
+              <div class="infomation-box">
+                <div class="social-profiles-div">
                   <i class=""></i>
                   <img src="assets\png\icons8-share-50.png" alt="">
                   <h3>Social Profiles</h3>
@@ -531,15 +531,15 @@
                   </div>
                 </div>
 
-                <div class="">
-                    <div class="infomation-box">
+                <div class="infomation-box">
+                    <div class="email-div">
                       <i class="bx bx-envelope"></i>
                       <img src="assets\png\emails-icon.png" alt="">
                       <hr>  <a href="mailto:dilushaeka99@gmail.com"> mail me</a>
                     </div>
                 </div>
-                <div class="">
-                    <div class="infomation-box">
+                <div class="infomation-box">
+                    <div class="call-div">
                       <i class="bx bx-phone-call"></i>
                       <h3>Call Me</h3>
                       <img src="assets\png\phone icon.png" alt="">
