complte assignment section

--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
                   <div class="social-profiles-div">
                     <img src="assets\png\icons8-share-50.png" alt="">
                     <h3  class="infomation-title">Social Profiles</h3>
+                    <br> <br> <br>
                     <div class="social-links2">
                       <a href="https://www.facebook.com/profile.php?id=100076016966270" class="facebook"> <img src="assets\png\facebook.png" alt=""></a>
                       <a href="#" class="instagram"> <img src="assets\png\icons8-instagram-24.png" alt=""></a>
@@ -589,8 +590,9 @@
                 <div class="infomation-box">
                       <div class="call-div">  
                         <img src="assets\png\phone icon.png" alt="">
-                        <h3   class="infomation-title">Call Me</h3>
-                        <br> <a href="tel:+94702487524"> +94702487524 </a>
+                        <h3   class="infomation-title">Call Me</h3> <br>
+                        <br>
+                         <a href="tel:+94702487524"> +94702487524 </a>
                       </div>
                 </div> <br><br><br>
                 </div>
@@ -631,6 +633,10 @@
 
 
     </main>
+
+    <footer>
+      
+    </footer>
     
     <script src="/assets/jQuary/jquery-3.6.4.min.js"></script>
 
