Add View Button For My Works

--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
             <li class="nav-item"><a class="nav-link" href="#mywork-section" >My work</a></li>
             <li class="nav-item"><a href="#contatct-section" >Contact</a></li>
           </ul>
-            <div class="hamburger">
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
-            </div>
+          <div class="hamburger"><img src="assets/icons/Hamburger_icon.svg.png" alt=""></div>   
       </nav>   
     </header>
         <!-- End of the header --> 
@@ -214,7 +210,7 @@
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                       <div class="icon-box">
                         <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                        <h3>Dolor Sitema</h3>
+                        <h3>Coding</h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -406,7 +402,7 @@
                     </div>
     
                     <div>
-                        <img src="assets\images\with-national.JPG" alt="" width="500">
+                        <img src="" alt="" width="500">
                     </div>
     
                     <div>
@@ -430,7 +426,7 @@
                   </div>
   
                   <div>
-                      <img src="assets\images\with-national.JPG" alt="" width="500">
+                      <img src="" alt="" width="500">
                   </div>
   
                   <div>
@@ -467,17 +463,73 @@
                       <div class="asignment">
                         <div class="icon-box">
                           <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
+                          <h4><a href="https://github.com/dilushaeka/UkTileShopManage">UK Tile House</a></h4>
+                          <p>This is my JAVA And MYSQL Project</p> <br>
+                          <button class="view-btn">View</button>
                         </div>
                       </div>
 
 
                       <div class="asignment">
                         <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
+                          <div class="icon"><i class="" ></i><img src="assets/images/Projects/css Box Assignment.png" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/CSS_Box_Modle">Box Modle CSS</a></h4>
+                          <p>Using Css</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets\images\Projects\IT Assignment4.jpg" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/css_assignment4">Animations</a></h4>
+                          <p> Animations Creations</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets/images/Projects/assignment5.jpg" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/css_assignment5">Card</a></h4>
+                          <p>Using HTML And CSS</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets/images/Projects/POS Assignment7.png" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/bootstrap-pos">POS System</a></h4>
+                          <p>CRUD Of POS System</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets/images/Projects/Assignmentt9.png" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/Night_Rider_Animation">Knight Rider light Animation</a></h4>
+                          <p>Html and javaScript</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets\images/Projects/calculater ass8.png" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/calculator">Calculater</a></h4>
+                          <p>Calacululaer using javaScript</p> <br>
+                          <button class="view-btn">View</button>
+                        </div>
+                      </div>
+
+                      <div class="asignment">
+                        <div class="icon-box">
+                          <div class="icon"><i class="" ></i><img src="assets/images/Projects/carAnimation.png" alt=""></div> <br> <br> <br>
+                          <h4><a href="https://github.com/dilushaeka/carAnimation">Car Animation</a></h4>
+                          <p>using css and javaScript</p> <br>
+                          <button class="view-btn">View</button>
                         </div>
                       </div>
 
@@ -485,55 +537,8 @@
                         <div class="icon-box">
                           <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
                           <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
-                        </div>
-                      </div>
-
-                      <div class="asignment">
-                        <div class="icon-box">
-                          <div class="icon"><i class="" ></i><img src="assets\images\uk tile.png" alt=""></div> <br> <br> <br>
-                          <h4><a href="https://github.com/dilushaeka">UK Tile House</a></h4>
-                          <p>This is my JAVA And MYSQL Project</p>
+                          <p>This is my JAVA And MYSQL Project</p> <br>
+                          <button class="view-btn">View</button>
                         </div>
                       </div>
 
