--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                   </div>
                 </div> <br> <br>
                         
-            </div>
-            <div class="cv animate__rubberBand" >
+            </div> <br> <br>
+            <div class="cv animate__animated animate__shakeX animate__repeat-5" >
               <a href="assets\pdf\my pdf.pdf" download="Dilusha's RESUME.pdf"><h2>DOWNLOAD MY CV </h2></a>
             </div>
 
