--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
  <!-- Vendor CSS Files -->
- <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
- <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
@@ -491,7 +490,7 @@
                           <div class="icon"><i class="" ></i><img src="assets\images\Projects\IT Assignment4.jpg" alt=""></div> <br> <br> <br>
                           <h4><a href="https://github.com/dilushaeka/css_assignment4">Animations</a></h4>
                           <p> Animations Creations</p> <br>
-                          <button class="view-btn"><a href="/assignments/Animation/waterdrop.html" >View</a></button>
+                          <button class="view-btn"><a href="http://127.0.0.1:5501/assignments/Animation/index.html" >View</a></button>
                         </div>
                       </div>
 
@@ -518,7 +517,7 @@
                           <div class="icon"><i class="" ></i><img src="assets/images/Projects/Assignmentt9.png" alt=""></div> <br> <br> <br>
                           <h4><a href="https://github.com/dilushaeka/Night_Rider_Animation">Knight Rider light Animation</a></h4>
                           <p>Html and javaScript</p> <br>
-                          <button class="view-btn"><a href="https://dilushaeka.github.io/Assignment9/" >View</a></button>
+                          <button class="view-btn"><a href="http://127.0.0.1:5501/assignments/Assignment9/index.html" >View</a></button>
                         </div>
                       </div>
 
@@ -658,7 +657,6 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
