--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
 </head>
 <body>
     
-    
-
     <div id="preloder">
         <img src="/assets/images/gif/loading.gif" alt="preloder">
     </div>
@@ -544,7 +542,7 @@
                           <div class="icon"><i class="" ></i><img src="assets/images/Projects/js qeue.png" alt=""></div> <br> <br> <br>
                           <h4><a href="https://github.com/dilushaeka/js_qeue_Ass_">This Is JavaScript Qeue</a></h4>
                           <p>This is my JAVA And MYSQL Project</p> <br>
-                          <button class="view-btn"><a href="https://dilushaeka.github.io/js_qeue_Ass_/" >View</a></button>
+                          <button class="view-btn"><a href="http://127.0.0.1:5501/assignments/Assignment-8-master/index.html" >View</a></button>
                         </div>
                       </div>
 
@@ -657,6 +655,7 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
