--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
+
+
     </div>
 </header><!-- End Header -->
 <main>
@@ -331,7 +333,7 @@
                     </div>
 
                     <div>
-                        <img src="assets\images\side-angle.JPG" alt=""  width="300">
+                        <img src="assets\images\side-angle.JPG" alt="side"  width="300">
                     </div>
 
                     <div>
