--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="js/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -96,7 +96,10 @@
         <h1><a href="index.html">Dilusha Ekanayake</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-        <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+<!--        <h2>I'm a passionate <span>graphic designer</span> from New York</h2>-->
+
+            <h2>I'm <span class="multiple-context"></span></h2>
+
 
         <nav id="navbar" class="navbar">
             <ul>
@@ -165,10 +168,10 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/me.jpg" class="img-fluid" alt="">
+                    <img src="assets/images/in-galle-removebg.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>UI/UX &amp; Graphic Designer</h3>
+                    <h3>FULL STACK DEVELOPER</h3>
                     <p class="fst-italic">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                         magna aliqua.
@@ -176,22 +179,22 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 September 1999</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.dilush.com</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Contact :</strong> <span> +94702487524</span></li>
+
                             </ul>
                         </div>
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
+
+                                <li><i class="bi bi-chevron-right"></i> <strong>Location :</strong> <span>Western Province,Sri Lanka </span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>E mail :</strong> <span> dilushaeka99@gmail.com</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                             </ul>
                         </div>
                     </div>
-                    <p>
+                    <p >
                         I’m  Software Engineering Student , Social Worker & Volunteer From Sri Lanka.
                         I Have  Done So Many Social projects and Volunteering Events.Highly Ambitious
                         & Focused Undergraduate in Computer Science.
@@ -240,64 +243,122 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="resume-title">Sumary</h3>
+                    <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
-                        <h4>Alice Barkley</h4>
-                        <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-                        <p>
-                        <ul>
-                            <li>Portland par 127,Orlando, FL</li>
-                            <li>(123) 456-7891</li>
-                            <li>alice.barkley@example.com</li>
-                        </ul>
-                        </p>
+                    <div>
+                        <h4>I.J.S.E -  INSTITUTE OF SOFTWARE  ENGINEERING</h4>
+                        <h5>2022- PRESENT </h5>
+                        <p>GDSE (UG) - GRADUATE DIPLOMA OF SOFTWARE ENGINEERING</p>
+                    </div>
                     </div>
 
+                    <br>
+
+
                     <h3 class="resume-title">Education</h3>
-                    <div class="resume-item">
-                        <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2015 - 2016</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                    <div class="resume-item pb-0">
+                        <div>
+                            <h4>ADVANCED LEVEL </h4>
+                        </div>
+                        <div>
+                            <h5>2018 </h5>
+                            <P>RAJAPKSE CENTRAL COLLAGE - WEERAKETIYA.</P>
+                        </div>
+                        <div>
+                            <h4>Primary Education</h4>
+                        </div>
+                        <div>
+                            <h4></h4>
+                            <P>ROYAL COLLAGE - EMBILIPITIYA.</P>
+                        </div>
                     </div>
-                    <div class="resume-item">
-                        <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                        <h5>2010 - 2014</h5>
-                        <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                        <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+                    <br>
+
+                    <!-- VOLUNTEERING experions divition -->
+                    <h3 class="resume-ttle">VOLUNTEERING EXPERIENCE</h3>
+                    <div class="resume-item pb-0">
+                    <div>
+                        <h4>MEMBER  </h4>
+                    </div>
+                    <div>
+                        <h5>2012 - PRESENT</h5>
+                        <p> SRI LANKA FEDERATION OF YOUTH CLUBS </P>
+                    </div>
+                    <div>
+                        <h4>NATIONAL BOARD MEMBER  </h4>
+                    </div>
+                    <div>
+                        <h5>2021 - PRESENT</h5>
+                        <p> SRI LANKA FEDERATION OF YOUTH CLUBS </P>
+                    </div>
                     </div>
                 </div>
+
+
+                <!--  ==========================================================================================================-->
+
+
                 <div class="col-lg-6">
-                    <h3 class="resume-title">Professional Experience</h3>
-                    <div class="resume-item">
-                        <h4>Senior graphic design specialist</h4>
-                        <h5>2019 - Present</h5>
-                        <p><em>Experion, New York, NY </em></p>
-                        <p>
-                        <ul>
-                            <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                            <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                            <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                            <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-                        </ul>
-                        </p>
+                    <h2 class="resume-title">INTERNATIONAL</h2>
+                    <div class="resume-item pb-0">
+                        <h4 class="resume-ttle">INTERNATIONAL EXPERIENCE</h4>
+                        <div>
+                            <h6> PARTICIPATING FROM  SRI LANKA  </h6>
+                        </div>
+                        <div>
+                            <h5> 2021 </h5>
+                            <P>INTERNATIONAL YOUTH FORUM- RUSSIA  </P>
+                        </div>
                     </div>
-                    <div class="resume-item">
-                        <h4>Graphic design specialist</h4>
-                        <h5>2017 - 2018</h5>
-                        <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                        <p>
-                        <ul>
-                            <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                            <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                            <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                            <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-                        </ul>
-                        </p>
+                    <br>
+
+
+                    <h2 class="resume-tile">SPORT</h2>
+                    <div class="resume-item pb-0">
+                        <h4> CRICKET </h4>
+
+                    <div>
+                        <h5> 2014 </h5>
+                        <P>U-15 NATIONAL CRICKET TEAM- SRI LANKA</P>
+                    </div>
+                    <div>
+                        <h5>2021-2023 </h5>
+                        <P>STATE SERVICES CRICKET TEAM - NATIONAL YOUTH SERVICE COUNCIL </P>
+                    </div>
+                    </div>
+                    <br>
+
+                    <!-- VOLUNTEERING experions divition -->
+                    <h3 class="resume-ttle">VOLUNTEERING EXPERIENCE</h3>
+                    <div class="resume-item pb-0">
+                        <div>
+                            <h4>MEMBER  </h4>
+                        </div>
+                        <div>
+                            <h5>2012 - PRESENT</h5>
+                            <p> SRI LANKA FEDERATION OF YOUTH CLUBS </P>
+                        </div>
+                        <div>
+                            <h4>NATIONAL BOARD MEMBER  </h4>
+                        </div>
+                        <div>
+                            <h5>2021 - PRESENT</h5>
+                            <p> SRI LANKA FEDERATION OF YOUTH CLUBS </P>
+                        </div>
                     </div>
                 </div>
             </div>
 
+
+
+
+
+        </div>
+
+
+        </div> <br> <br>
+        <div class="cv animate__animated animate__shakeX animate__repeat-5"style="background-color: #1a1d20;margin: 10px;padding: 10px; width: fit-content ;margin-left: 400px" >
+            <a href="assets/pdf/Dilusha's.cv.pdf" download="Dilusha's.cv.pdf"><h2>DOWNLOAD MY CV </h2></a>
         </div>
 
     </section><!-- End Resume Section -->
@@ -393,7 +454,7 @@
                             <h4>UK Tile House</h4>
                             <p>App</p>
                             <div class="portfolio-links">
-                                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+<!--                                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
                                 <a href="https://github.com/dilushaeka/UkTileShopManage" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -526,7 +587,7 @@
         </div>
     </section><!-- End Portfolio Section -->
     <!-- ===================================== Contact Section ================================================== -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact " >
         <div class="container">
 
             <div class="section-title">
@@ -538,9 +599,10 @@
 
                 <div class="col-md-6 d-flex align-items-stretch">
                     <div class="info-box">
-                        <i class="bx bx-map"></i>
+                        <i class="bx bx-map" href="https://www.google.com/maps/@6.7144534,79.9065093,16z"></i>
                         <h3>My Address</h3>
-                        <p>A108 Adam Street, New York, NY 535022</p>
+
+                        <a href="https://www.google.com/maps/@6.7144534,79.9065093,16z"> Western Province,Colombo</a>
                     </div>
                 </div>
 
@@ -562,38 +624,43 @@
                     <div class="info-box">
                         <i class="bx bx-envelope"></i>
                         <h3>Email Me</h3>
-                        <p>contact@example.com</p>
+                        <a href="mailto:dilushaeka99@gmail.com"> dilushaeka99@gmail.com </a>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
                     <div class="info-box">
                         <i class="bx bx-phone-call"></i>
                         <h3>Call Me</h3>
-                        <p>+1 5589 55488 55</p>
+                        <a href="tel:+94702487524"> +94702487524 </a>
                     </div>
                 </div>
             </div>
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+            <form onsubmit="sendEmail(); reset(); return false">
+<!--                    action="forms/contact.php" -->
+
+<!--            method="post" role="form" -->
+<!--            class="php-email-form mt-4"-->
+
                 <div class="row">
                     <div class="col-md-6 form-group">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" >
                     </div>
                     <div class="col-md-6 form-group mt-3 mt-md-0">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" >
                     </div>
                 </div>
                 <div class="form-group mt-3">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" >
                 </div>
                 <div class="form-group mt-3">
                     <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
-                <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
+<!--                <div class="my-3">-->
+<!--                    <div class="loading">Loading</div>-->
+<!--                    <div class="error-message"></div>-->
+<!--                    <div class="sent-message">Your message has been sent. Thank you!</div>-->
+<!--                </div>-->
                 <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
