--- a/index.html
+++ b/index.html
@@ -173,9 +173,8 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>FULL STACK DEVELOPER</h3>
                     <p class="fst-italic">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
-                    </p>
+
+                    </p> <br>   <br>  <br>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -205,7 +204,7 @@
                 </div>
             </div>
 
-            <div class="row tech-main-div"> +
+            <div class="row tech-main-div">
 
                 <div><h2>Here's</h2></div>
                 <div><h1>Technologies</h1></div>
@@ -216,7 +215,7 @@
                     <div class="tech-img"><img  src="assets\png\java.png" alt="java-png"><span></span></div>
                     <div class="tech-img"><img  src="assets\png\hibernate-icon-0.jpg" alt="hiber-png"><span></span></div>
                     <div class="tech-img"><img  src="assets\png\html-5.png" alt="html-png"></div>
-                    <div class="tech-img"><img  src="assets\png\github-mark-white.png" alt="css-png" style="background-color: black;"><span>CSS</span></div>
+                    <div class="tech-img"><img  src="assets\png\github-mark-white.png" alt="css-png" style="background-color: black;"><span></span></div>
                     <div class="tech-img"><img  src="assets\png\logo-mysql-170x115.png" alt="java-png"><span></span></div>
                     <div class="tech-img"><img  src="assets\png\figma.png" alt="hiber-png"><span></span></div>
                     <div class="tech-img"><img  src="assets\png\javaScript.png" alt="html-png"></div>
@@ -227,6 +226,8 @@
 
 
                 </div>
+
+
             </div><br> <br> <br>
 
         </div><!-- End About Me -->
