fixed About section

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                 </div>
             </div>
 
+            <br><br><br>
             <div class="row tech-main-div">
 
                 <div><h2>Here's</h2></div>
@@ -350,15 +351,11 @@
                 </div>
             </div>
 
-
-
-
-
-        </div>
+<!--        </div>-->
 
 
         </div> <br> <br>
-        <div class="cv animate__animated animate__shakeX animate__repeat-5"style="background-color: #1a1d20;margin: 10px;padding: 10px; width: fit-content ;margin-left: 400px" >
+        <div class="cv animate__animated animate__shakeX animate__repeat-5"style="background-color: #1a1d20; margin:auto ;padding: 10px; width: fit-content ;left:0; right: 0; top:0;bottom: 0;" >
             <a href="assets/pdf/Dilusha's.cv.pdf" download="Dilusha's.cv.pdf"><h2>DOWNLOAD MY CV </h2></a>
         </div>
 
@@ -367,62 +364,71 @@
     <!-- ====================================== Gallery Section ================================================== -->
 
     <section class="row gallery" id="gallery-section">
-        <div class="container">
-            <div  class="section-title" >
-                <h2>GALLERY</h2>
-                <h1>YOU CAN SEE MY GALLERY HERE </h1>
-            </div> <br>  <br> <br>
-            <div class="Box">
 
-                <div>
-                    <img src="assets\images\volunteer Award.JPG" alt=""  width="500">
+        <!-- ======= Testimonials ======= -->
+        <div class="testimonials container">
+
+            <div class="section-title">
+                <h2>Gallery</h2>
+                <p>Check Gallery Items</p>
+            </div>
+            <br><br><br><br>
+            <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets\images\volunteer Award.JPG" alt=""  height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets\png\my profile pic.jfif" alt="" width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets\images\thaipongal.JPG" alt="" width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets\images\internatinal banner.JPG" alt="" width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets\images\side-angle.JPG" alt="side"  width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets/images/with-national.JPG" alt="side" width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <img src="assets/images/in-galle.JPG" alt="side" width="400" height="500">
+                        </div>
+                    </div><!-- End testimonial item -->
+
                 </div>
+                <div class="swiper-pagination">
 
-                <div>
-                    <img src="assets\png\my profile pic.jfif" alt="" width="500" >
-                </div>
-
-                <div>
-                    <img src="" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\thaipongal.JPG" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\internatinal banner.JPG" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\side-angle.JPG" alt="side"  width="300">
-                </div>
-
-                <div>
-                    <img src="assets\images\volunteer Award.JPG" alt=""  width="500">
-                </div>
-
-                <div>
-                    <img src="assets\png\my profile pic.jfif" alt="" width="500" >
-                </div>
-
-                <div>
-                    <img src="" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\thaipongal.JPG" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\internatinal banner.JPG" alt="" width="500">
-                </div>
-
-                <div>
-                    <img src="assets\images\side-angle.JPG" alt=""  width="300">
                 </div>
             </div>
-        </div>
+
+            <div class="owl-carousel testimonials-carousel">
+
+            </div>
+
+        </div><!-- End Testimonials  -->
     </section> <br> <br> <br> <br> <br> <br>
 
 
@@ -431,8 +437,7 @@
         <div class="container">
 
             <div class="section-title">
-                <h2>Portfolio</h2>
-                <p>My Works</p>
+                <h2>My Works</h2>
             </div>
 
             <div class="row">
@@ -578,12 +583,11 @@
 
         </div>
 
-        <div> <br> <br> <br> <br> <br>
+        <div class="cv animate__animated animate__shakeX animate__repeat-5"style="background-color: #1a1d20; margin:auto ;padding: 10px; width: fit-content ;left:0; right: 0; top:0;bottom: 0;" > <br> <br> <br> <br> <br>
             <h1>
-                <a class="hireMe animate__heartBeat animate__repeat-1 " style="color: #76078f; background-color: #29cc61; width: fit-content; padding: 14px; text-decoration: none; animation-name: hire;
-                      animation-duration: 0.5s;
-
-                      animation-iteration-count: infinite;" href="https://medium.com/@dilushaeka99">Click Here to My Blog site</a>
+                <a class="hireMe animate__heartBeat animate__repeat-1 " style="color: #76078f;  background-color: #29cc61; width: fit-content; padding: 14px; text-decoration: none; animation-name: hire;
+                      animation-duration: 0.5s;animation-iteration-count: infinite;" href="https://medium.com/@dilushaeka99">Click Here to My Blog site
+                </a>
             </h1>
         </div>
     </section><!-- End Portfolio Section -->
