--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
     <!-- link pre loder css -->
-    <!-- <link rel="stylesheet" href="/css/preloder.css"> -->
+     <link rel="stylesheet" href="/css/preloder.css">
 
 
 </head>
@@ -68,26 +68,10 @@
 
 
 
-<!--    <div id="preloder">-->
-<!--        <img src="/assets/images/gif/loading.gif" alt="preloder">-->
-<!--    </div>-->
+    <div id="preloder">
+        <img src="/assets/images/gif/loading.gif" alt="preloder">
+    </div>
 
-<!-- ============== ==============================Header=====================================================   -->
-<!--<header id="header" class="header">-->
-<!--      &lt;!&ndash; <a href="" class="logo">Dilusha</a>  &ndash;&gt;-->
-<!--    <nav id="navbar" class="navbar">-->
-<!--        <img class="hamburger"  src="assets/icons/icons8-hamburger-button-50.png" alt="ham">-->
-<!--        <ul class="nav-list">-->
-<!--            <li class="nav-item"><a class="nav-link " href="#home-section">Home</a></li>-->
-<!--            <li class="nav-item"><a class="nav-link" href="#about" >About</a></li>-->
-<!--            <li class="nav-item"><a class="nav-link" href="#resume" >Resume </a></li>-->
-<!--            <li class="nav-item"><a class="nav-link" href="#gallery-section">Gallery</a></li>-->
-<!--            <li class="nav-item"><a class="nav-link" href="#portfolio" >My work</a></li>-->
-<!--            <li class="nav-item"><a href="#contact" >Contact</a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-<!--</header>-->
-<!-- End of the header -->
 
 <!-- ======= Header ======= -->
 <header id="header">
@@ -125,34 +109,7 @@
     </div>
 </header><!-- End Header -->
 <main>
-    <!--        <section class="home" id="home-section">-->
-    <!--          <div class="container" id="homeContainer">-->
-    <!--            <div class="social-links">-->
-    <!--              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>-->
-    <!--              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
-    <!--              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>-->
-    <!--              <a href="#" class="twitter"> <i class="bi bi-twitter"></i></a>-->
-    <!--            </div>-->
-    <!--            <div class="header-title">-->
-    <!--              <h2 class="animate__animated animate__bounce__repeat-4">Hello it's Me</h2>-->
-    <!--            </div>-->
-    <!--              <br>-->
-    <!--              <br>-->
-    <!--            <div class="name" data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="2000">-->
-    <!--              <h1>DILUSHA EKANAYAKE</h1>-->
-    <!--&lt;!&ndash;              <img src="assets\images\my officia photo png.png" alt="" id="headerPic">&ndash;&gt;-->
-    <!--            </div>-->
-    <!--            <br>-->
-    <!--            &lt;!&ndash; <br>-->
-    <!--            <br> &ndash;&gt;-->
-    <!--            <div class="intro">-->
-    <!--                <h1>I'm <span class="multiple-context"></span></h1>-->
-    <!--            </div>-->
-    <!--            <div class="hireMe animate__heartBeat animate__repeat-1 ">-->
-    <!--              <h1>HIRE Me</h1>-->
-    <!--            </div>-->
-    <!--          </div>-->
-    <!--      </section>  <br> <br> <br> <br> <br> <br>-->
+
 
 
     <!-- ======================================= about SECTION ================================================== -->
@@ -642,10 +599,7 @@
             </div>
 
             <form onsubmit="sendEmail(); reset(); return false">
-<!--                    action="forms/contact.php" -->
 
-<!--            method="post" role="form" -->
-<!--            class="php-email-form mt-4"-->
 
                 <div class="row">
                     <div class="col-md-6 form-group">
@@ -661,11 +615,7 @@
                 <div class="form-group mt-3">
                     <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
-<!--                <div class="my-3">-->
-<!--                    <div class="loading">Loading</div>-->
-<!--                    <div class="error-message"></div>-->
-<!--                    <div class="sent-message">Your message has been sent. Thank you!</div>-->
-<!--                </div>-->
+
                 <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
